@@ -1,6 +1,9 @@
 0.20
     - Use Mouse instead of Moose by default. This saves about 9MB of
       resident memory
+
+    - Drop MouseX::Role::Strict / MooseX::Role::Strict
+
     - Improve punctuation when words are split with '/'
 
 0.19 Sat Feb 27 04:23:03 GMT 2010
